# py-st-swim-wise

./: .gitignore  CHANGELOG.md  LICENSE  README.md  README.zh-CN.md  main.py  pyproject.toml
app/: __init__.py
app/subpages/: Monitor.py  __init__.py  display.py  home.py  preparation.py  prescription.py  preview.py
app/tools/: __init__.py  layout.py  lever.py
utils/: __init__.py  apis.py  config.py  decorator.py  helper.py  highlighter.py  stats.py
