[project]
name = "py-st-swim-wise"
version = "0.1.0"
description = "A digital smart swimming training management platform"
authors = [{ name = "Shawn Yu" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.git-changelog]
bump = "auto"
convention = "conventional"
in-place = false
filter-commits = ""
marker-line = "<!-- insertion marker for GitHub -->"
output = "CHANGELOG.md"
parse-refs = true
parse-trailers = true
provider = "github"
repository = "."
sections = ["feat", "fix", "chore", "docs", "perf", "build", "refactor", "test", "deps"]
template = "angular"
version-regex = "^## \\[(?P<version>v?[^\\]]+)"
versioning = "semver"
zerover = false
