[project]
name = "py-st-swim-wise"
version = "0.1.0"
description = "A digital smart swimming training management platform"
authors = [{ name = "Shawn Yu" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit>=1.59.1",
    "watchdog>=6.0.0",
]

[tool.git-changelog]
bump = "auto"
convention = "conventional"
in-place = false
filter-commits = ""
marker-line = "<!-- insertion marker for GitHub -->"
output = "CHANGELOG.md"
parse-refs = true
parse-trailers = true
provider = "github"
repository = "."
sections = ["feat", "fix", "chore", "docs", "perf", "build", "refactor", "test", "deps"]
template = "angular"
version-regex = "^## \\[(?P<version>v?[^\\]]+)"
versioning = "semver"
zerover = false

[dependency-groups]
dev = [
    "black>=26.5.1",
    "git-changelog>=2.9.4",
    "ruff>=0.15.21",
]
